--- a/css/main_style.css
+++ b/css/main_style.css
@@ -66,6 +66,7 @@ h2, h3, h4 {
     height: auto;
     padding-top: 1%;
     padding-bottom: 1%;
+    z-index: 100;
 }
 
 .header__flex {
@@ -156,6 +157,62 @@ h2, h3, h4 {
     height: auto;
 }
 
+/* contact */
+
+.contacts {
+    display: none;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+    z-index: 200;
+}
+
+.contacts__box {
+    display: block;
+    position: relative;
+    background-color: rgb(236, 236, 236);
+    width: 30%;
+    height: auto;
+    margin: 10% auto;
+    padding: 2% 3% 3% 3%;
+    border-radius: 10px;
+    z-index: 100;
+}
+
+.contacts__close {
+    display: block;
+    position: absolute;
+    right: 2%;
+    top: 2%;
+    width: 10%;
+    height: auto;
+    cursor: pointer;
+    transition: .3s ease-in-out;
+}
+
+.contacts__close:hover {
+    transform: scale(1.1);
+    transition: .3s ease-in-out;
+}
+
+.contacts__close img {
+    width: 100%;
+    height: auto;
+}
+
+.contacts__box-inner {
+    display: block;
+    width: 80%;
+    margin: 4% auto;
+}
+
+.contacts__box-inner h2:nth-child(2), .contacts__box-inner h2:nth-child(3) {
+    padding-top: 1%;
+    padding-left: 10%;
+    letter-spacing: 1px;
+}
+
 /* footer */
 
 .footer {
@@ -185,7 +242,7 @@ h2, h3, h4 {
     height: auto;
 }
 
-.footer__heading{
+.footer__heading {
     display: block;
     width: 100%;
     height: auto;
@@ -194,16 +251,18 @@ h2, h3, h4 {
     text-align: center;
     color: white;
 }
-.footer__flex{
-display: flex;
-flex-wrap: nowrap;
-justify-content: space-around;
-width: 90%;
-height: auto;
-margin: 0 auto;
-color: white;
+
+.footer__flex {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+    color: white;
 }
-.footer__flex h2{
+
+.footer__flex h2 {
     text-align: center;
     cursor: pointer;
 }
