--- a/css/restaurant_style.css
+++ b/css/restaurant_style.css
@@ -20,6 +20,26 @@
     height: auto;
 }
 
+.restaurant-profile-img {
+    border-radius: 250px;
+}
+
+.restaurant-profile-img img {
+    border-radius: 250px;
+}
+
+.header__profile-login {
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.header__profile-exit {
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
 .main {
     background-image: url('../img/background/gold-cutlery-set-black-background.jpg');
     background-blend-mode: multiply;
@@ -144,4 +164,98 @@
 .main__form-input-file h4 {
     color: red;
     text-align: center;
+}
+
+.category__container {
+    display: block;
+    background-color: white;
+    width: 100%;
+    height: auto;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.category__flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+}
+
+.category__box {
+    display: block;
+    width: 20%;
+    height: auto;
+    text-align: center;
+}
+
+.goods {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.box-no-goods {
+    display: block;
+    text-align: center;
+}
+
+.add-goods {
+    display: block;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 1%;
+    width: 40%;
+    height: auto;
+    margin: 1% auto;
+    text-align: center;
+    cursor: pointer;
+}
+
+.add-goods:hover {
+    transform: scale(1.1);
+    transition: .5s ease-in-out;
+}
+
+.add-goods-module {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 200;
+}
+
+.add-goods-module__box {
+    display: block;
+    position: relative;
+    background-color: rgba(219, 219, 219, 0.9);
+    width: 50%;
+    height: auto;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin: 4% auto;
+    border-radius: 10px;
+}
+
+.module__close {
+    display: block;
+    position: absolute;
+    right: 2%;
+    top: 2%;
+    width: 10%;
+    height: auto;
+    cursor: pointer;
+    transition: .3s ease-in-out;
+}
+
+.module__close:hover {
+    transform: scale(1.1);
+    transition: .3s ease-in-out;
+}
+
+.module__close img {
+    width: 100%;
+    height: auto;
 }
