--- a/css/goods_style.css
+++ b/css/goods_style.css
@@ -1,3 +1,33 @@
+.header {
+    background-image: none;
+    background-color: white;
+    height: auto;
+}
+
+.category__container {
+    display: block;
+    background-color: white;
+    width: 100%;
+    height: auto;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.category__flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+}
+
+.category__box {
+    display: block;
+    width: 20%;
+    height: auto;
+    text-align: center;
+}
+
 .goods {
     background-color: rgba(0, 0, 0, 0.1);
 }
@@ -60,4 +90,84 @@
     padding-top: 1%;
     padding-bottom: 1%;
     text-align: center;
+}
+
+.restaurant-container {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 90vh;
+    padding-top: 15%;
+}
+
+.restaurant-container__img-box {
+    display: block;
+    position: relative;
+    width: 90%;
+    height: 80vh;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
+.restaurant-container__img-box img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.restaurant-container__text-content {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.restaurant-container__name-restaurant {
+    display: block;
+    padding-top: 10%;
+    padding-bottom: 2%;
+    text-align: center;
+    color: white;
+}
+
+.restaurant-container__description {
+    display: block;
+    width: 80%;
+    height: auto;
+    padding-left: 5%;
+    color: white;
+}
+
+.restaurant-container__category {
+    display: block;
+    width: 40%;
+    height: auto;
+    margin: 0 auto;
+    padding-top: 10%;
+    text-align: center;
+    color: white;
+}
+
+.goods__button-add-box input[type=submit] {
+    display: block;
+    background-color: inherit;
+    outline: none;
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 70%;
+    height: auto;
+    padding: 1%;
+    text-align: center;
+    margin: 2% auto;
+    cursor: pointer;
+    transition: .5s ease-in-out;
+}
+
+.goods__button-add-box input[type=submit]:hover {
+    transform: scale(1.05);
+    transition: .5s ease-in-out;
 }
