--- a/css/main_style.css
+++ b/css/main_style.css
@@ -41,7 +41,7 @@ h1 {
     font-family: heading_font;
 }
 
-h2, h3, h4 {
+h2, h3, h4, input[type=submit] {
     font-family: Daray;
 }
 
@@ -61,12 +61,13 @@ h2, h3, h4 {
 .header__fixed-block {
     display: block;
     position: fixed;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 1);
     width: 100%;
     height: auto;
     padding-top: 1%;
     padding-bottom: 1%;
     z-index: 100;
+    box-shadow: 1px 4px 5px rgba(0, 0, 0, 0.3);
 }
 
 .header__flex {
@@ -117,6 +118,21 @@ h2, h3, h4 {
 .header__user-img img {
     width: 100%;
     height: auto;
+}
+
+.user-active {
+    display: block;
+    width: 100%;
+    height: 15vh;
+    overflow: hidden;
+}
+
+.user-active img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 250px;
 }
 
 .header__user-name {
