--- a/css/user_page_style.css
+++ b/css/user_page_style.css
@@ -14,7 +14,7 @@
     background-position: center;
     background-blend-mode: multiply;
     background-color: rgba(0, 0, 0, 0.3);
-    padding-top: 12%;
+    padding-top: 15%;
 }
 
 .user-data__heading {
@@ -37,6 +37,19 @@
     height: auto;
 }
 
+.data-container-img-active {
+    display: block;
+    overflow: hidden;
+}
+
+.data-container-img-active img {
+    width: 19vw;
+    height: 40vh;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 250px;
+}
+
 .button-img {
     display: block;
     width: 60%;
@@ -47,6 +60,7 @@
     border: 1px solid white;
     transition: .5s ease-in-out;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .button-img:hover {
@@ -94,4 +108,208 @@
     padding-top: 1%;
     padding-bottom: 1%;
     text-align: center;
+}
+
+.add-user-img {
+    display: none;
+    align-items: center;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100vh;
+    z-index: 200;
+}
+
+.add-user-img__box {
+    display: block;
+    position: relative;
+    background-color: white;
+    border-radius: 10px;
+    width: 40%;
+    height: auto;
+    margin: 0 auto;
+    padding: 1%;
+}
+
+.add-user-img__heading {
+    display: block;
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.add-user-img__input {
+    display: block;
+    text-align: center;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.add-user-img__input-submit {
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.add-user-img__input-submit input {
+    display: inline-block;
+    background-color: white;
+    outline: none;
+    border: 2px solid #20e6fc;
+    padding: 2%;
+    width: 60%;
+    border-radius: 25px;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+    text-align: center;
+}
+
+.add-user-img__input-submit input:hover {
+    background-color: #20e6fc;
+    transition: .5s ease-in-out;
+    color: white;
+}
+
+.no-goods {
+    display: block;
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.box__flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.rest-box {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 40%;
+    height: 100%;
+    padding-bottom: 1%;
+    margin-bottom: 4%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.rest-box__img {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 30vh;
+}
+
+.rest-box__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.rest-box__heading {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    text-align: center;
+    width: 36%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    color: white;
+    z-index: 1;
+}
+
+.goods__flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 4%;
+    justify-content: space-between;
+}
+
+.box-goods {
+    display: block;
+    background-color: white;
+    width: 40%;
+    height: auto;
+    padding-bottom: 1%;
+    padding-left: 1%;
+    padding-right: 1%;
+    border-radius: 10px;
+    margin: 1%;
+}
+
+.box-goods__heading {
+    display: block;
+    text-align: center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.box-goods__img {
+    display: block;
+    width: 90%;
+    height: auto;
+    margin: 1% auto;
+}
+
+.box-goods__img img {
+    width: 100%;
+    height: auto;
+}
+
+.box-goods__price {
+    display: block;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    text-align: center;
+}
+
+.box-goods__total-price {
+    display: block;
+    text-align: center;
+    padding-top: 4%;
+    padding-bottom: 2%;
+}
+
+.form-booking__input-container {
+    display: none;
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.form-booking__input-box input[type=time] {
+    display: inline-block;
+    padding: 1%;
+    outline: none;
+    border: 1px solid rgba(100, 100, 100, 0.6);
+    border-radius: 15px;
+    transition: .5s ease-in-out;
+    width: 20%;
+}
+
+.form-booking input[type=submit] {
+    display: block;
+    background-color: white;
+    outline: none;
+    border: 2px solid #20e6fc;
+    padding: 2%;
+    width: 60%;
+    margin: 0 auto;
+    border-radius: 25px;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+}
+
+.form-booking input[type=submit]:hover {
+    background-color: #20e6fc;
+    transition: .5s ease-in-out;
+    color: white;
 }
