--- a/css/user_page_style.css
+++ b/css/user_page_style.css
@@ -14,7 +14,7 @@
     background-position: center;
     background-blend-mode: multiply;
     background-color: rgba(0, 0, 0, 0.3);
-    padding-top: 15%;
+    padding-top: 5%;
 }
 
 .user-data__heading {
@@ -196,6 +196,13 @@
     border-bottom-right-radius: 10px;
 }
 
+.rest-box-container {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+
 .rest-box__img {
     display: block;
     position: relative;
@@ -214,7 +221,7 @@
     background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
     text-align: center;
-    width: 36%;
+    width: 100%;
     padding-top: 1%;
     padding-bottom: 1%;
     color: white;
@@ -232,6 +239,7 @@
 
 .box-goods {
     display: block;
+    position: relative;
     background-color: white;
     width: 40%;
     height: auto;
@@ -240,6 +248,17 @@
     padding-right: 1%;
     border-radius: 10px;
     margin: 1%;
+}
+
+.box-goods input[type=checkbox] {
+    display: block;
+    position: absolute;
+    background-color: inherit;
+    border: 1px solid black;
+    width: 2vw;
+    height: 3vh;
+    top: 3%;
+    right: 2%;
 }
 
 .box-goods__heading {
@@ -312,4 +331,35 @@
     background-color: #20e6fc;
     transition: .5s ease-in-out;
     color: white;
+}
+
+.delete-rest-box {
+    display: block;
+    position: absolute;
+    width: 8%;
+    height: 8%;
+    right: 2%;
+    top: 1%;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.delete-rest-box img {
+    width: 100%;
+    height: auto;
+}
+
+/* aplication */
+
+.my-aplication {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.my-aplication__heading {
+    display: block;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    text-align: center;
 }
