--- a/css/restaurant_style.css
+++ b/css/restaurant_style.css
@@ -259,3 +259,140 @@
     width: 100%;
     height: auto;
 }
+
+.aplication {
+    display: block;
+    background-color: white;
+    width: 100%;
+    height: auto;
+}
+
+.aplication__heading {
+    display: block;
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.rest-box {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 40%;
+    height: 100%;
+    padding-bottom: 1%;
+    margin-bottom: 4%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.rest-box-container {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+
+.rest-box__img {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 30vh;
+}
+
+.rest-box__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.rest-box__heading {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    color: white;
+    z-index: 1;
+}
+
+.my-aplication__flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 90%;
+    height: auto;
+    margin: 2% auto;
+}
+
+.aplication__data {
+    display: block;
+    padding-left: 5%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.aplication__data-goods {
+    display: block;
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.aplication-goods__flex-container {
+    display: flex;
+    background-color: white;
+    border-radius: 10px;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    align-items: center;
+    margin: 5%;
+}
+
+.aplication-goods__img {
+    display: block;
+    width: 25%;
+    height: 25%;
+}
+
+.aplication-goods__img img {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+}
+
+.aplication__data-status {
+    width: 70%;
+    height: auto;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.status-submit {
+    display: block;
+    background-color: white;
+    outline: none;
+    border: 2px solid #20e6fc;
+    padding: 1%;
+    width: 60%;
+    border-radius: 25px;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+    margin: 2% auto;
+}
+
+.status-submit__2 {
+    display: block;
+    background-color: white;
+    outline: none;
+    border: 2px solid #20e6fc;
+    padding: 1%;
+    width: 70%;
+    border-radius: 25px;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+    margin: 2% auto;
+}
