--- a/css/user_page_style.css
+++ b/css/user_page_style.css
@@ -363,3 +363,61 @@
     padding-bottom: 1%;
     text-align: center;
 }
+
+.my-aplication__flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 90%;
+    height: auto;
+    margin: 2% auto;
+}
+
+.aplication__data {
+    display: block;
+    padding-left: 5%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.aplication__data-goods {
+    display: block;
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.aplication-goods__flex-container {
+    display: flex;
+    background-color: white;
+    border-radius: 10px;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    align-items: center;
+    margin: 5%;
+}
+
+.aplication-goods__img {
+    display: block;
+    width: 25%;
+    height: 25%;
+}
+
+.aplication-goods__img img {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+}
+
+.aplication-goods__data {
+    width: 60%;
+}
+
+.aplication__data-status {
+    width: 70%;
+    height: auto;
+    margin: 0 auto;
+    text-align: center;
+}
